<resources>
    <string name="app_name">Contact list</string>

    <!-- common -->
    <string name="btn_cancel_text">Cancel</string>

    <!-- departments -->
    <string name="department_name_all">All</string>
    <string name="department_name_android">Android</string>
    <string name="department_name_ios">iOS</string>
    <string name="department_name_design">Design</string>
    <string name="department_name_management">Management</string>
    <string name="department_name_qa">QA</string>
    <string name="department_name_back_office">Back office</string>
    <string name="department_name_frontend">Frontend</string>
    <string name="department_name_hr">HR</string>
    <string name="department_name_pr">PR</string>
    <string name="department_name_backend">Backend</string>
    <string name="department_name_support">Support</string>
    <string name="department_name_analytics">Analytics</string>

    <!-- filter_dialog -->
    <string name="filter_dialog_sort">Сортировка</string>
    <string name="filter_dialog_on_alphabet">По алфавиту</string>
    <string name="filter_dialog_on_birthday">По дню рождения</string>
    <string name="search_layout_hint">Введи имя, тег, почту...</string>
    <string name="network_error_header">Какой-то сверхразум все сломал</string>
    <string name="network_error_description">Постараемся быстро починить</string>
    <string name="network_error_btn">Попробовать снова</string>
    <string name="recycler_year">2022</string>

</resources>