<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_ufo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/flying_saucer" />

        <TextView
            android:id="@+id/tv_network_error_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/network_error_header"
            android:textAppearance="@style/AppTheme.Typography.inter_semi_bold_17"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_network_error_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_error_description"
            android:textAppearance="@style/AppTheme.Typography.inter_regular_16"
            android:textColor="@color/grey" />

        <Button
            android:id="@+id/ib_network_error_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/network_error_btn"
            android:textAppearance="@style/AppTheme.Typography.inter_semi_bold_16"
            android:textColor="@color/purple" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>