<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_content"
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="56dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:background="@drawable/line_short" />

            <TextView
                android:id="@+id/tv_sorted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/filter_dialog_sort"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_filter_alphabet"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:buttonTint="@color/purple"
                android:fontFamily="@font/inter_medium"
                android:paddingStart="10dp"
                android:text="@string/filter_dialog_on_alphabet"
                android:textSize="16sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_filter_birthday"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="34dp"
                android:buttonTint="@color/purple"
                android:fontFamily="@font/inter_medium"
                android:paddingStart="10dp"
                android:text="@string/filter_dialog_on_birthday"
                android:textSize="16sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>
